# hanzi_lookup

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.cmd  build_wasm.cmd
.cargo/: config
cli_demo/: Cargo.toml
cli_demo/debug/: inputs.txt
cli_demo/src/: main.rs
hanzi_lookup/: Cargo.toml  build.cmd  index.html
hanzi_lookup/src/: analyzed_character.rs  cubic_curve_2d.rs  entities.rs  lib.rs  match_collector.rs  matcher.rs
mmah_json_convert/: Cargo.toml
mmah_json_convert/src/: main.rs
web_demo/: HanziLookup.js  HanziLookupWebWorker.js  hanzi_lookup.js  hanzi_lookup_bg.wasm  index.html
web_demo/pub/: drawingBoard.js  hanzi_lookup.js  hanzi_lookup_bg.wasm  index.html  worker.js
