[package]
name = "hanzi_lookup"
version = "0.0.1"
authors = ["gugray <gabor@berlin.de>"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.42", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.1.3"
serde_derive = "1.0.90"

[build-dependencies]
wasm-bindgen-cli = "= 0.2.42"
