[package]
name = "hanzi_lookup"
version = "1.0.0"
authors = ["gugray <zydeodict@gmail.com>"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.42", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.1.3"
serde_derive = "1.0.90"
serde_json = "1.0"

[build-dependencies]
wasm-bindgen-cli = "= 0.2.42"
